completado de iconos sprite.svg

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         </svg>
 
         <svg width="28" height="28">
+            <use xlink:href="./assets/sprite3.svg#postgresql"></use>
+        </svg>
+
+        <svg width="28" height="28">
+            <use xlink:href="./assets/sprite3.svg#tailwind"></use>
+        </svg>
+
+        <svg width="28" height="28">
+            <use xlink:href="./assets/sprite3.svg#bootstrap"></use>
+        </svg>
+
+        <svg width="28" height="28">
+            <use xlink:href="./assets/sprite3.svg#linuxMint"></use>
+        </svg>    
+
+        <svg width="28" height="28">
             <use xlink:href="./assets/sprite3.svg#git"></use>
         </svg>
 
@@ -53,7 +69,7 @@
 
     </main>
     <footer>
-        Desarrollado para practicar y mejorar
+        Desarrollado para practicar
     </footer>
 </body>
 
